# myproject_sfXX

./: .gitignore  README.md  categories.json  manage.py  prod.json  products.json  pyproject.toml  requirements.txt  ww.html
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
config/: asgi.py  settings.py  urls.py
fly/: admin.py  apps.py  models.py  settings.py  urls.py  views.py
fly/fixtures/: catalog_clean.json
fly/management/: load_test_data.py
fly/migrations/: 0001_initial.py  0002_alter_product_updated_at.py  0003_alter_category_options_alter_product_options_and_more.py  0004_product_views_counter.py
fly/templates/: base.html  prod_detail.html  prod_list.html
fly/templates/fly/: base.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
fly/templates/fly/includes/: inc_menu.html
fly/templates/includes/: inc_menu.html
fly/templatetags/: my_tags.py
