[project]
name = "pythonproject8"
version = "0.1.0"
description = ""
authors = [
    {name = "RuslanZubrin",email = "error.blin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython (>=9.4.0,<10.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pillow (>=11.3.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
